--- a/report_templates/cluster_details_go_template.Rmd
+++ b/report_templates/cluster_details_go_template.Rmd
@@ -1,3 +1,5 @@
+# Report 3: Cluster Details for GO-term coherent clusters
+  
 ```{r  echo=FALSE, warning=FALSE, message=FALSE}
   metric_table <- data[['more-spec_table_metrics.txt']]
   library(dplyr)
