cluster_details_go_template.Rmd changes

--- a/report_templates/cluster_details_go_template.Rmd
+++ b/report_templates/cluster_details_go_template.Rmd
@@ -70,7 +70,21 @@
           
           all_groups[["omim"]] <- omim_groups_ordered
         }
+        patient_groups <- filter(df4, Cluster == clusters[i])
+        if (nrow(patient_groups) != 0){
+          patient_vector_length <- c()
+          
+          for(patient in 1:length(patient_groups$shared_hpos)){
+            nb <- strsplit(patient_groups$shared_hpos[patient], ", ")[[1]]
+            patient_vector_length[patient] <- length(nb)
+          }
+          
+          patient_index <- with(patient_groups, order(patient_vector_length, decreasing = TRUE))
+          patient_groups_ordered <- patient_groups[patient_index,]
+          rownames(patient_groups_ordered) <- NULL
 
+          all_groups[["patient"]] <- patient_groups_ordered
+        }
         name <- paste0("Cluster_", i)
         all_clusters[[name]] <- all_groups 
         }
@@ -88,23 +102,27 @@
 #Load files add add hyperlinks
 
   hpo <- load_files(metric_table, 'Type', 'Cluster_hpo_go_0.05', TRUE)
+  go <- load_files(metric_table, 'Type', 'Cluster_go_0.05', TRUE)
+  omim <- load_files(metric_table, 'Type', 'Cluster_omim_go_0.05', TRUE)
+  patient <- load_files(metric_table, 'Type', 'patient_coincidence_with_clusters_and_gene_systems_go_0.05', TRUE)
+
   for (i in 1:length(hpo$Term)){
     url <- paste0("https://hpo.jax.org/app/browse/term/", hpo$Term[i])
     hpo$Term[i] <- text_spec(hpo$Term[i], link = url)
   }
 
-  go <- load_files(metric_table, 'Type', 'Cluster_go_0.05', TRUE)
   for (i in 1:length(go$Term)){
     url <- paste0("http://amigo.geneontology.org/amigo/term/", go$Term[i])
     go$Term[i] <- text_spec(go$Term[i], link = url)
   }
-
-  omim <- load_files(metric_table, 'Type', 'Cluster_omim_go_0.05', TRUE)  
+    
   for (i in 1:length(omim$Term)){
     omim_id <- unlist(strsplit(omim$Term[i], ":"))
     url <- paste0("https://www.omim.org/entry/", omim_id[2])
     omim$Term[i] <- text_spec(omim$Term[i], link = url)
   }
+
+  
 
 #Group data by cluster
   all_clusters <- group_cluster_information(hpo, go, omim)
