--- a/report_templates/article_figures.Rmd
+++ b/report_templates/article_figures.Rmd
@@ -218,7 +218,7 @@ library(dplyr)
 
 df <- read.table("../results/phen2phen_net", sep ="\t", header = FALSE)
 colnames(df) <- c("HPO-A", "HPO-B", "HyI")
-prevalence_single_decipher <- read.table("/mnt/scratch/users/bio_267_uma/elenads/build_both_nets_enriched/shuf_0000/all_hpo_prevalence", sep ="\t", header = FALSE)
+prevalence_single_decipher <- read.table("../results/all_hpo_prevalence", sep ="\t", header = FALSE)
 prevalence_pairs_decipher <- load_files(metric_table, "Type", "decipher_pairs_prevalence", header=FALSE)
 
 grid.arrange(
